--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
 
 p{
     color: #FFFFFF;
+    line-height: 1.3;
 }
 
 
@@ -63,9 +64,22 @@ p{
 .sp_body{
     background-image: url(../img/moroccan.webp);
 }
+.recipe{
+    border-color: #000;
+    border-style: solid;
+    border-radius: 30px;
+    margin-left: 100px;
+}
+.recipe-img{
+    padding-left: 20px;
+    border-color: #000;
+    border-style: solid;
+    border-radius: 20px;
+}
 /* this is a css comment*/
 /* existen tres tipos de box model en css */
-/*Margin:
+/*
+  Margin:
   Border
   Padding:
 */
