--- a/figma/stylesheet/style.css
+++ b/figma/stylesheet/style.css
@@ -25,3 +25,26 @@ body{
 .justify-between{
     justify-content: space-between;
 }
+.justify-center{
+    justify-content: center;
+}
+.items-center{
+    align-items: center;
+}
+.m-8{
+    margin: 8px;
+}
+.p-8{
+    padding: 8px;
+}
+.py-18{
+    padding: 18px 0 18px;
+}
+.py-8{
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+.px-16{
+    padding-left: 16px;
+    padding-right: 16px;
+}
