--- a/figma/stylesheet/style.css
+++ b/figma/stylesheet/style.css
@@ -12,27 +12,13 @@ body{
     font-family: 'Lato', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    background-color: #121826;
 }
 h1{
     margin: 0px;
 }
 p{
     margin: 0px;
-}
-.block{
-    display: block;
-}
-.inline-block{
-    display: inline-block;
-}
-.inline{
-    display: inline;
-}
-.hidden{
-    display: none;
-}
-.flex{
-    display: flex;
 }
 .justify-between{
     justify-content: space-between;
@@ -50,7 +36,8 @@ p{
     padding: 8px;
 }
 .py-18{
-    padding: 18px 0 18px;
+    padding-top: 18px;
+    padding-bottom: 18px;
 }
 .py-8{
     padding-top: 8px;
@@ -83,17 +70,11 @@ p{
 .rounded-full{
     border-radius: 99px;
 }
-.font-bold{
-    font-weight: bold;
-}
 .uppercase{
     text-transform: uppercase;
 }
 .text-sm{
     font-size: 14px;
-}
-.w-full{
-    width: 100%;
 }
 .h-full{
     height: 100%;
@@ -101,8 +82,8 @@ p{
 .relative{
     position: relative;
 }
-.z-10{
-    z-index: 10;
+.absolute{
+    position: absolute;
 }
 .object-cover{
     object-fit: cover;
@@ -115,4 +96,37 @@ p{
 }
 .bg-white{
     background-color: white;
+}
+.mx-auto{
+    margin-left: auto;
+    margin-right: auto;
+}
+.text-16px{
+    font-size: 16px;
+}
+.text-36px{
+    font-size: 36px;
+}
+.h-450px{
+    height: 450px;
+}
+/* sm screen size */
+@media (min-width: 600px){
+    .bg-blue{
+        /* background-color: blue; */
+    }
+    .sm\:text-60px{
+        font-size: 60px;
+    }
+    .sm\text-20px{
+        font-size: 20px;
+    }
+    
+
+}
+/* md screen size */
+@media (min-width: 768px){
+    .md\:h-689px{
+        height: 689px;
+    }
 }
